--- a/ScanStack/appsettings.json
+++ b/ScanStack/appsettings.json
@@ -1,10 +1,6 @@
 ﻿{
   "LocalSettingsOptions": {
     "ApplicationDataFolder": "ScanStack/ApplicationData",
-    "LocalSettingsFile": "LocalSettings.json",
-    "AllowDataCollecting" : true
-  },
-  "ApplicationInsights": {
-    "ConnectionString": "XXXXX"
+    "LocalSettingsFile": "LocalSettings.json"
   }
 }
